# automated-research-report-generation

./: .gitignore  README.md  pyproject.toml
research_and_analyst/notebook/: test.ipynb
